projects/demo_project/reports/demo_suite2/2021.12.07.19.41.57.835/demo_test.7e8b86/execution_debug.log
2021-12-07 19:41:59,066 root INFO Test execution started: demo_test
2021-12-07 19:41:59,067 root INFO Browser: chrome
2021-12-07 19:41:59,067 root INFO Environment: testenv
2021-12-07 19:41:59,067 root INFO Using data:
    user_name: second_user_for_demo
    url: http://automationpractice.com/index.php?controller=authentication&back=my-account
2021-12-07 19:41:59,069 root ERROR IndentationError: expected an indented block
Traceback (most recent call last):
  File "C:\Users\Dell\OneDrive\Рабочий стол\UIAutomation_ARM-main\projects\demo_project\tests\demo_test.py", line 30
    def teardown(data):
    ^
IndentationError: expected an indented block

